keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  labels:
    app: keycloak-service
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
